fix: articles list width change and hero content wrapped with .container

--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -173,21 +173,40 @@ nav {
 .latest__wrapper {
     margin-top: 24px;
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: baseline;
-    flex-wrap: wrap;
     gap: 20px;
+
+    @media (min-width: $tablet) {
+        flex-direction: row;
+    }
+}
+
+.latest__wrapper__row {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+
+    @media (min-width: calc(#{$mobile} - 100px)) {
+        flex-direction: row;
+    }
 }
 
 
 /* ARTICLE CARD */
 .articleCard {
-    max-width: 310px;
+    flex: 1;
+    //max-width: 310px;
     overflow: hidden;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
 }
 
 .articleCard_image {
+    max-height: 280px;
     width: 100%;
     height: 100%;
     object-fit: cover;
